Fix: catatan panjang ikut melebarkan card catatan Tidak terdapat word wrapping otomatis pada catatan

--- a/src/assets/css/catatan.css
+++ b/src/assets/css/catatan.css
@@ -37,6 +37,7 @@ catatan {
     padding-top: 0;
     color: white;
     white-space: pre-line; 
+    word-break: break-all;
 }
 
 .notes-footer {
